# StructedLightViewer

./: CMakeLists.txt  README.md  main.cpp  qml.qrc
include/: OpenGLItem.h  Render.h
shader/: cloud.frag  cloud.vert  coordinate.frag  coordinate.vert  depth.frag  depth.vert  grid.frag  grid.vert  skyBox.frag  skyBox.vert
src/: OpenGLItem.cpp  Render.cpp
src/cuda/: cudaTypeDef.cuh  renderCloud.cu
systemFile/calibrationFiles/: extrinsic.yml  intrinsic.yml
ui/: StructedLightViewer.ui.qml  main.qml
